Auto-add pet, item menu, duplicate check, real download